src/test/ui/borrowck/borrowck-union-borrow-nested.stderr
error[E0503]: cannot use `u.c` because it was mutably borrowed
  --> $DIR/borrowck-union-borrow-nested.rs:24:17
   |
LL |             let ra = &mut u.s.a;
   |                           ----- borrow of `u.s.a` occurs here
LL |             let b = u.c; //~ ERROR cannot use `u.c` because it was mutably borrowed
   |                 ^ use of borrowed `u.s.a`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0503`.
